# stock-target-price-calculator

./: Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: appwindow.slint
