[package]
name = "stock-target-price-calculator"
version = "0.1.0"
authors = ["Franz Plam <office@franzplam.com>"]
edition = "2021"
build = "build.rs"
description = "https://github.com/plamf/stock-target-price-calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
num-format = "0.4.4"

[build-dependencies]
slint-build = "1.0"

[package.metadata.bundle]
name = "Stock Target Price Calculator"
identifier = "io.github.plamf.stock-target-price-calculator"
